fix compile errors